--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@hookform/resolvers": "^5.0.1",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "motion": "^12.15.0",
     "next": "15.3.3",
     "react": "^19.0.0",
