refactor: Enhance type safety and improve code consistency across multiple components

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "rm -rf .next && next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
