--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-  "name": "univarsity-management-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "rm -rf .next && next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "type-check": "tsc --noEmit",
-    "prepare": "husky install",
-    "lint-staged": "lint-staged"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
-    "@reduxjs/toolkit": "^2.8.2",
-    "axios": "^1.9.0",
-    "dayjs": "^1.11.13",
-    "jwt-decode": "^4.0.0",
-    "moment": "^2.30.1",
-    "motion": "^12.15.0",
-    "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.57.0",
-    "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0",
-    "react-redux": "^9.2.0",
-    "reactjs-popup": "^2.0.6",
-    "zod": "^3.25.55"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.3",
-    "eslint-config-prettier": "^10.1.5",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.1.2",
-    "prettier": "^3.5.3",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+    "name": "univarsity-management-frontend",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "rm -rf .next && next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "type-check": "tsc --noEmit",
+        "prepare": "husky",
+        "lint-staged": "lint-staged"
+    },
+    "dependencies": {
+        "@hookform/resolvers": "^5.0.1",
+        "@reduxjs/toolkit": "^2.8.2",
+        "axios": "^1.9.0",
+        "dayjs": "^1.11.13",
+        "jwt-decode": "^4.0.0",
+        "moment": "^2.30.1",
+        "motion": "^12.15.0",
+        "next": "15.3.3",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-hook-form": "^7.57.0",
+        "react-hot-toast": "^2.5.2",
+        "react-icons": "^5.5.0",
+        "react-redux": "^9.2.0",
+        "reactjs-popup": "^2.0.6",
+        "zod": "^3.25.55"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "15.3.3",
+        "eslint-config-prettier": "^10.1.5",
+        "husky": "^9.1.7",
+        "lint-staged": "^16.1.2",
+        "prettier": "^3.5.3",
+        "tailwindcss": "^4",
+        "typescript": "^5"
+    }
 }
