--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "@typescript-eslint/eslint-plugin": "^8.34.1",
         "eslint": "^9",
         "eslint-config-next": "15.3.3",
         "eslint-config-prettier": "^10.1.5",
